# solana_program_and_rust_client

./: .gitignore  README-installation-notes.md  README.md  book.toml  index.html
.github/workflows/: mdbook.yml
_layout/: default.html
client/: Cargo.toml
client/src/: client.rs  config.rs  errors.rs  lib.rs  main.rs
common/: Cargo.toml
common/src/: instruction.rs  lib.rs  state.rs
program/: Cargo.toml
program/src/: entrypoint.rs  processor.rs
src/: README.md  SUMMARY.md  installation.md  program.md  project-structure.md  quick-start.md
src/client/: account-setup.md  connection.md  deployment-check.md  main-function.md  query-counter.md  send-transaction.md
theme/: custom.css
