[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = "0.9.3"
home = "0.5.3"
linked-hash-map = "0.5.4"
solana-client = "1.10.7"
solana-sdk = "1.10.7"
yaml-rust = "0.4.5"

common = { path ="../common"}
