[package]
name = "client"
version = "0.1.0"
edition = "2021"

description = "Solana counter client"
authors = ["Ratul Buragohain <ratul75@hotmail.com>"]
repository = "https://github.com/ratulb/solana_counter_program"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = "0.9.3"
home = "0.5.3"
linked-hash-map = "0.5.4"
solana-client = "1.10.7"
solana-sdk = "1.10.7"
yaml-rust = "0.4.5"

common = { path ="../common"}
solana-logger = "1.10.8"
