[package]
name = "common"
version = "0.1.0"
edition = "2021"
description = "Solana counter program common"
authors = ["Ratul Buragohain <ratul75@hotmail.com>"]
repository = "https://github.com/ratulb/solana_counter_program"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = "0.9.3"
