[package]
name = "program"
version = "0.1.0"
edition = "2021"
description = "Solana counter program"
authors = ["Ratul Buragohain <ratul75@hotmail.com>"]
repository = "https://github.com/ratulb/solana_counter_program"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = "0.9.3"
solana-program = "1.10.7"
common = { path = "../common" }

[lib]
crate-type = ["cdylib", "lib"]
no-entrypoint = []
